# xcodeproj-bazel

./: .gitignore  .gitingnore  .gitmodules  .swiftlint.yml  LICENCE  MODULE.bazel  OSLog+extension.swift  README.md  WORKSPACE  xcodeproj.bazelrc
HelloWorld/iOS/: AppDelegate.swift  Application.swift  BUILD  HelloWorldViewController.swift  Info.plist  LaunchScreen.storyboard  Localization.swift  OSLog+extension.swift  RGBColorView.swift  SceneDelegate.swift  UIColor+extension.swift  UIStackView+extension.swift  UIView+extension.swift  _BUILD  main.m  xcodeproj.bazelrc
HelloWorld/iOS/Assets.xcassets/bazel.imageset/: Contents.json
HelloWorld/iOS/Sources/: AppDelegate.swift  Application.swift  HelloWorldViewController.swift  Localization.swift  MainCoordinator.swift  RGBColorView.swift  SceneDelegate.swift  main.m
HelloWorld/iOS/en.lproj/: Localizable.strings
HelloWorld/iOS/fi.lproj/: InfoPlist.strings  Localizable.strings
HelloWorld/iOS/infoplists/: HelloWorldInfo.plist  HelloWorldiOSFrameworkInfo.plist
build-system/: generate-xcodeproj.sh
submodules/FoundationExtension/: BUILD
submodules/HelloWorldUI/: BUILD
submodules/HelloWorldUI/Sources/: FeedViewController.swift  FeedViewDelegate.swift  HelloWorldViewController.swift  InstructionsViewController.swift  LoadingView.swift  Localization.swift  OnBoardingViewController.swift  PageViewController.swift  RGBColorView.swift  TestViewController.swift  TestViewController2.swift  TestViewController3.swift  WhatsNewViewController.swift
submodules/OSExtension/: BUILD
submodules/OSExtension/Sources/: OSLog+extension.swift
submodules/SharedKit/: BUILD
submodules/SharedKit/Sources/: Haberdasher.swift
submodules/UIKitExtension/: BUILD  ___BUILD
submodules/UIKitExtension/Sources/: UIBarButtonItem+extension.swift  UIButton+extension.swift  UIColor+extension.swift  UIControlState+hashable.swift  UIImage+extension.swift  UINavigationItem+extension.swift  UIPageViewController+extension.swift  UIStackView+extension.swift  UITableViewCell.swift  UIView+extension.swift  UIView+spacer.swift
(+11 files in other folders)
