###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "xcodeproj-bazel",
    version = "0.1.0",
    # Optional: bazel_compatibility = ">=7.0.0"
)

# Apple rules
bazel_dep(name = "rules_apple", version = "3.20.1", repo_name = "build_bazel_rules_apple")

# Swift rules
bazel_dep(name = "rules_swift", version = "2.8.1", repo_name = "build_bazel_rules_swift")

# Apple support
bazel_dep(name = "apple_support", version = "1.21.1", repo_name = "build_bazel_apple_support")

# rules_xcodeproj (buildbuddy)
bazel_dep(name = "rules_xcodeproj", version = "2.11.2", repo_name = "com_github_buildbuddy_io_rules_xcodeproj")

# Skylib
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# bazel_features (required by rules_xcodeproj)
bazel_dep(name = "bazel_features", version = "1.28.0")  # Use correct/latest version as needed

# No use_extension or load statements are required or allowed.
# Some rules require their setup extensions to be run
#use_extension("@build_bazel_rules_apple//:extensions.bzl", "apple")
#apple.apple_rules_dependencies()

#use_extension("@build_bazel_rules_swift//:extensions.bzl", "swift")
#swift.swift_rules_dependencies()
#swift.swift_rules_extra_dependencies()

#use_extension("@build_bazel_apple_support//:extensions.bzl", "apple_support")
#apple_support.apple_support_dependencies()

#use_extension("@com_github_buildbuddy_io_rules_xcodeproj//:extensions.bzl", "xcodeproj")
#xcodeproj.xcodeproj_rules_dependencies()

#use_extension("@bazel_skylib//:extensions.bzl", "workspace")
#workspace.bazel_skylib_workspace()

#use_extension("@bazel_features//:extensions.bzl", "deps")
#deps.bazel_features_deps()
